# miniRenderer

./: .gitignore  CMakeLists.txt  README.md
miniRenderer/: geometry.cpp  geometry.h  main.cpp  mat.h  model.cpp  model.h  render.cpp  render.h  transform.cpp  transform.h  vec.cpp  vec.h  window.cpp  window.h
miniRenderer/Camera/: camera.h  fpscamera.cpp  fpscamera.h  tpscamera.cpp  tpscamera.h
miniRenderer/Math/: mat.cpp  mat.h  transform.cpp  transform.h  vec.cpp  vec.h
miniRenderer/Render/: framebuffer.cpp  framebuffer.h  glwidget.cpp  glwidget.h  model.cpp  model.h  pipeline.cpp  pipeline.h  render.cpp  render.h  texture2d.cpp  texture2d.h  tgaimage.cpp  tgaimage.h
miniRenderer/Scene/: scene.h  simplescene.cpp  simplescene.h
miniRenderer/Shader/: baseshader.cpp  baseshader.h  phongshader.cpp  phongshader.h
